# cinnamon-theme-installer

./: .gitignore  Documentation.md  MANIFEST.in  Makefile  README.md  pyproject.toml
cinnamon_theme_installer/: __init__.py  apputils.py  main.py
